package GastosFamiliares.Modelo.Enumeraciones;

/**
 *
 * @author Abel Antonio Tatis Maturana
 */
public enum EstadoBolsaAhorroEnum {
    ACTIVA,
    LOGRADA,
    CERRADA
}
