package GastosFamiliares.Modelo.Enumeraciones;

/**
 *
 * @author Abel Antonio Tatis Maturana
 */
public enum GeneroMiembroEnum {
    MASCULINO,
    FEMENINO,
    OTRO
}
