package GastosFamiliares.Modelo.Enumeraciones;

/**
 *
 * @author Abel Antonio Tatis Maturana
 */
public enum RolFamiliarMiembroEnum {
    ABUELO,
    ABUELA,
    PADRE,
    MADRE,
    HIJO,
    HIJA,
    //   '--
    TIO,
    TIA,
    PRIMO,
    PRIMA
}
