package GastosFamiliares.Modelo.Enumeraciones;

/**
 *
 * @author Abel Antonio Tatis Maturana
 */
public enum RolUsuarioEnum {
    ADMINISTRADOR,
    MIEMBRO
}
